# mai-cpp-labs

./: README.md
lab1/: CmakeLists.txt  main.cpp
lab1/include/: task.h
lab1/src/: task.cpp
lab1/test/: tests.cpp
lab2/: CmakeLists.txt  main.cpp
lab2/include/: five.hpp
lab2/src/: five.cpp
lab2/test/: tests.cpp
lab3/: CMakeLists.txt  main.cpp
lab3/include/: array.hpp  coordinate.hpp  figure.hpp  hexagon.hpp  octagon.hpp  pentagon.hpp
lab3/src/: array.cpp  coordinate.cpp  hexagon.cpp  octagon.cpp  pentagon.cpp
lab3/test/: testArray.cpp  testCoordinate.cpp  testHexagon.cpp  testOctagon.cpp  testPentagon.cpp
